tests/passing/semantics_unsafe_edge_case.tails
func tests() -> unit:
  let ptr = null::*int

  unsafe:
    unsafe: pass

    let a = *ptr

  pass
