tests/failing/type_def_recursive_nested.tails
type A = *A

func tests() -> unit:
  let a: A = 123

  pass
